--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "chat app with rooms",
   "main": "index.js",
   "scripts": {
-    "tailwind:css": "postcss ./public/tailwind.css -o ./public/styles.css",
+    "tailwind:css": "postcss ./src/tailwind.css -o ./src/styles.css",
     "start": "npm run tailwind:css && node server",
     "dev": "npm run tailwind:css && nodemon server",
     "build": "webpack"
