--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "tailwind:css": "postcss ./src/tailwind.css -o ./src/styles.css",
     "start": "npm run tailwind:css && node server",
-    "dev": "npm run tailwind:css && nodemon server",
+    "dev": "npm run tailwind:css && nodemon server"
   },
   "author": "",
   "license": "ISC",
